internal/controller/reconciler/testdata/policies/allow-to-kubedns.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/kubernetes/namespace/kubedns-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-to-kubedns
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
