internal/controller/reconciler/testdata/policies/and-statement.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/l3/match-expressions/and-statement.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: and-statement-policy
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: "k8s:io.kubernetes.pod.namespace"
              operator: In
              values:
                - production
            - key: "k8s:cilium.example.com/policy"
              operator: In
              values:
                - strict
