internal/controller/reconciler/testdata/policies/cidr-rule.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/l3/cidr/cidr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cidr-rule
spec:
  endpointSelector:
    matchLabels:
      app: myService
  egress:
    - toCIDR:
        - 20.1.1.1/32
    - toCIDRSet:
        - cidr: 10.0.0.0/8
          except:
            - 10.96.0.0/12
