internal/controller/reconciler/testdata/policies/cilium-health-checks.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/kubernetes/clusterwide/health.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health-checks
spec:
  endpointSelector:
    matchLabels:
      reserved:health: ""
  ingress:
    - fromEntities:
        - remote-node
  egress:
    - toEntities:
        - remote-node
