internal/controller/reconciler/testdata/policies/e2e-cidr-group.yaml
# CiliumCIDRGroup with RFC 1918 private address ranges.
# https://docs.cilium.io/en/latest/security/policy/language/#cidr-groups
apiVersion: cilium.io/v2alpha1
kind: CiliumCIDRGroup
metadata:
  name: e2e-cidr-group
spec:
  externalCIDRs:
    - "10.0.0.0/8"
    - "172.16.0.0/12"
    - "192.168.0.0/16"
