internal/controller/reconciler/testdata/policies/host-firewall-locked.yaml
# Host firewall with entities, CIDR ingress, and ingressDeny.
# https://docs.cilium.io/en/latest/security/host-firewall/
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-firewall-locked
spec:
  nodeSelector:
    matchLabels:
      node-access: locked
  ingress:
    - fromEntities:
        - cluster
    - fromCIDR:
        - "10.0.0.0/8"
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
  ingressDeny:
    - fromCIDR:
        - "192.168.0.0/16"
      toPorts:
        - ports:
            - port: "23"
              protocol: TCP
