internal/controller/reconciler/testdata/policies/icmp-rule.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/l4/icmp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: icmp-rule
spec:
  endpointSelector:
    matchLabels:
      app: myService
  egress:
    - icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: EchoRequest
              family: IPv6
