internal/controller/reconciler/testdata/policies/multi-rule-policy.yaml
# Multiple rules on one resource using "specs" (plural).
# Rule 1: web pods accept ingress from frontend on port 80/TCP.
# Rule 2: api pods allow egress to database on port 5432/TCP.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: multi-rule-policy
specs:
  - endpointSelector:
      matchLabels:
        app: web
    ingress:
      - fromEndpoints:
          - matchLabels:
              app: frontend
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        app: api
    egress:
      - toEndpoints:
          - matchLabels:
              app: database
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
