internal/controller/reconciler/testdata/policies/wildcard-from-endpoints.yaml
# From: https://github.com/cilium/cilium/blob/main/examples/policies/kubernetes/clusterwide/wildcard-from-endpoints.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: wildcard-from-endpoints
spec:
  description: "Policy for ingress allow to kube-dns from all Cilium managed endpoints in the cluster"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
